# compass

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.ar.md  README.es.md  README.md  README.zh-CN.md  pyproject.toml
compass/: __init__.py  agent.py  agent_helper.py  analysts.py  api.py  chat_skills.py  chats.py  cli.py  data_sources.py  db.py  dispatcher.py  distill.py  engagement.py  events.py  graph_mem.py  llm.py  packs.py  planner.py  skills.py  tools.py  universe.py  watchlist.py  workspace.py
compass/data/universe/: eu-tickers.json  us-tickers.json
compass/ingest/: __init__.py  base.py  edgar.py  yahoo.py
compass/static/: app.js  index.html
compass/static/assets/: index-4KG3BsuL.css  index-8Eyus5Cj.js  index-9uJNcw9r.css  index-B6_nhjwr.js  index-BGBSxShM.js  index-BGvSFk-b.css  index-BLwNm2vL.js  index-BPxwfz9A.js  index-BTMLOv7l.js  index-BgpoBW_q.js  index-Bh4iGjZ2.js  index-Bm9z2La9.css  index-BqesBi3G.js  index-Bwo-fqGu.js  index-By0Orq5o.css  index-C0F-JGZB.js  index-C2r6wecf.js  index-C8GNuqYQ.js  index-CDMnMbGQ.js  index-CGHQ1HHD.js  index-CONQYOiZ.css  index-CVZJW9ba.js  index-C_YoMmDS.js  index-CjgNJ3AR.js  index-CmBSNokR.js  index-CpOOucGS.css  index-CruUosm3.css  index-CtSyvU7D.js  index-CziVgftI.css  index-D0ffhtug.js  index-D0hp7w-v.js  index-D3ot2he1.js  index-D5dRxExz.js  index-D6fKEhBV.js  index-D7YjRL6V.css  index-DER6BRVV.js  index-DHAfePMG.css  index-DIdvQtE1.js  index-DLOwVOo9.js  index-DMSk_UKp.js  (+24 more)
docs/: slice-18-overnight.md
docs/design/: README.md
packs/: buffett.json  donald.json  munger.json  ray.json
skills/: README.md
skills/assemble-memo/: SKILL.md
skills/assemble-memo/scripts/: run.py
skills/buffett/: SKILL.md
skills/build-coverage-brief/: SKILL.md
skills/build-coverage-brief/scripts/: run.py
skills/donald/: SKILL.md
skills/draft-memo-section/: SKILL.md
skills/draft-memo-section/scripts/: run.py
skills/extract-kpis/: SKILL.md
skills/extract-kpis/scripts/: run.py
skills/fetch-earnings-history/: SKILL.md
skills/fetch-earnings-history/scripts/: run.py
skills/fetch-insider-trades/: SKILL.md
skills/fetch-insider-trades/scripts/: run.py
skills/fetch-institutional-holdings/: SKILL.md
skills/fetch-institutional-holdings/scripts/: run.py
skills/fetch-market-snapshot/: SKILL.md
skills/fetch-market-snapshot/scripts/: run.py
skills/fetch-news/: SKILL.md
skills/fetch-news/scripts/: run.py
skills/fetch-press-releases/: SKILL.md
skills/fetch-sec-filing/: SKILL.md
skills/fetch-wikipedia-overview/: SKILL.md
skills/frame-theme/: SKILL.md
skills/gate-coverage-check/: SKILL.md
skills/generate-trading-ideas/: SKILL.md
skills/inventory-existing-ideas/: SKILL.md
skills/munger/: SKILL.md
skills/parse-10k-segments/: SKILL.md
skills/pitch-memo/: SKILL.md
skills/plan-research/: SKILL.md
skills/ray/: SKILL.md
skills/survey-academic/: SKILL.md
skills/survey-theme/: SKILL.md
skills/update-coverage-brief/: SKILL.md
skills/web-research/: SKILL.md
specs/data/: test-insider-form-4.md  test1.md
tests/: conftest.py  test_agent_helper.py  test_agent_smoke.py  test_analysts.py  test_api_smoke.py  test_buffett_e2e.py  test_chat_router.py  test_chats.py  test_dispatcher.py  test_edgar_smoke.py  test_engagement.py  test_evidence_smoke.py  test_graph_mem.py  test_packs.py  test_planner.py  test_region_routing.py  test_research_smoke.py  test_skill_distill.py  test_skill_upload.py  test_skills.py  test_summarize_smoke.py  test_universe.py  test_watchlist.py  test_yahoo_smoke.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+57 files in other folders)
