[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compass-research"
version = "0.1.0"
description = "AI analyst pod for portfolio managers. Distilled investor personas, knowledge-graph second brain, idea generation."
readme = "README.md"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Di Zhu", email = "zhudi2825@gmail.com" }]
keywords = ["llm", "claude", "claude-code", "multi-agent", "investment-research", "fundamental-analysis", "knowledge-graph", "buy-side", "agent", "analyst"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "edgartools>=5.30.0",
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
compass = "compass.cli:app"

[project.urls]
Homepage = "https://github.com/dgtql/compass"
Repository = "https://github.com/dgtql/compass"
Issues = "https://github.com/dgtql/compass/issues"

[tool.hatch.build.targets.wheel]
packages = ["compass"]

# Universe seed JSON and any future bundled data are package data, not
# excluded source. The default hatch behaviour ships everything under
# `compass/`, but we declare it explicitly to keep it stable.
[tool.hatch.build.targets.wheel.force-include]
"compass/data" = "compass/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
